--- a/Day10/context_redux/package.json
+++ b/Day10/context_redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naviagtion",
+  "name": "context_redux",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,17 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "expo": "~53.0.12",
+    "@reduxjs/toolkit": "^2.8.2",
+    "expo": "~53.0.13",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.26.0",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
