--- a/WeatherApp/weatherapp/app.json
+++ b/WeatherApp/weatherapp/app.json
@@ -20,10 +20,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.shivam_1605.weatherapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9747bbd5-62c1-48fc-bd0d-542f9acc5571"
+      }
     }
   }
 }
